<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>a1_driver</name>
    <version>0.0.1</version>
    <description>ros2 driver for unitree A1</description>
    <maintainer email="sunbo32@huawei.com">Bo Sun</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>a1_msgs</depend>
    <depend>lcm</depend>
    <depend>unitree_legged_sdk</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
